--- a/job-portal-client/index.html
+++ b/job-portal-client/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.jpg" />
+        <link rel="icon" type="image/svg+xml" href="/l.png" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Home - Hunter Search your one</title>
+        <title>Home - Search your one</title>
     </head>
     <body>
         <div id="root"></div>
